k8s/producer-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: ingress-nginx
  creationTimestamp: null
  labels:
    io.kompose.service: producer
  name: producer
spec:
  containers:
    - env:
        - name: EVERY_X_MILLISECONDS
          value: "2000"
        - name: MQHOST
          value: rabbitmq
        - name: MQPASSWORD
          value: rabbitmq
        - name: MQPORT
          value: "5671"
        - name: MQUSER
          value: rabbitmq
        - name: STRATEGY
          value: rabbitMQ
      image: tonehmorris/rabbitmq-golang-demo:producer
      name: producer
      resources: {}
  restartPolicy: OnFailure

status: {}
