k8s/consumer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer-service

spec:
  type: ClusterIP
  ports:
    - name: "9090"
      protocol: TCP
      port: 9090
      targetPort: 9090
  selector:
    app: consumer
status:
  loadBalancer: {}
